--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
         <header>
             <section>
             <img src="img/image%201.jpg" alt="">
-            <h1>Paco<br>Bascuñan</h1>
+            <h1>solsticio</h1>
             </section>
             <section>
             <img src="img/image%202.jpg" alt="">
-            <h2>Alex<br>Steinweiss</h2>
+            <h2>stonehenge</h2>
             </section>
         </header>
         <main>
